open-webui/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-tailscale
  namespace: open-webui
spec:
  defaultBackend:
    service:
      name: open-webui
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - open-webui
